# imposition

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  LICENSE  README.md  conftest.py  hatch.toml  index.html  pyproject.toml  pytest.ini  run_imposition.py  setup.py  test_book.epub
.github/workflows/: ci.yml
src/imposition/: __init__.py  book.py  dom.py  exceptions.py  rendition.py
tests/: mocks.py  test_book.py  test_e2e.py  test_integration.py  test_navigation.py  test_rendition.py
tests/integration/: conftest.py  test_integration.py
