[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Imposition"
version = "0.1.0"
description = "A Python library for parsing and rendering EPUB files in Pyodide."
authors = [
    { name = "Michael R. Bernstein", email = "zopemaven@gmail.com" }
]
dependencies = [
    "setuptools"
]
