[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Imposition"
version = "0.1.0"
description = "A Python library for parsing and rendering EPUB files in Pyodide."
authors = [
    { name = "Michael R. Bernstein", email = "zopemaven@gmail.com" }
]
dependencies = []

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-asyncio",
  "anyio"
]

[tool.hatch.envs.default.scripts]
test = "pytest"

[tool.hatch.build.targets.wheel]
packages = ["src/imposition"]

[tool.ruff]
line-length = 88

[tool.ruff.lint.per-file-ignores]
"src/imposition/rendition.py" = ["F821"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
]
